added divs in contact and portfolio

--- a/index.html
+++ b/index.html
@@ -32,17 +32,18 @@
 	<p> My name is Victoria Field. I have a BS in History from East Carolina University. For the past nine years I have been an all-lines adjuster for a utility company. I realized that I was not being pushed so I decided to make a career change. Because I like problem solving, puzzles and building creations I decided to get my feet wet with web development. I started studing on my own and found that I loved it. So I decided to enroll in the full time UT Coding Bootcamp.</p>
 
 <div align="right"> <!--links-->
+	<p>Connect with me</p>
 	<a href="https://github.com/victoria-field"><img src="assets\images\github-mark.png" alt="github-mark" width="100" /></a>
 	<a href="https://www.linkedin.com/in/victoria-field"><img src="assets\images\unnamed.png" width="50"></a>
 	<a href="https://stackoverflow.com/users/8242550/vfield"><img src="assets\images\stackoverflow.png" width="50"></a>
-</div>
-</div>
+</div> <!--links-->
+</div> <!-->
 
-<footer textalign="center"> <!--footer-->
+<footer> <!--footer-->
 	<p>&copy; 2017 Victoria Field</p>
-</footer>
+</footer> <!--footer-->
 
-</div>
+</div><!--page>
 
 
 </body>
