I attempted to do this but ran into issues

--- a/contact.html
+++ b/contact.html
@@ -25,31 +25,27 @@
 </div> <!--nav-->
 
 </div> <!--head-->
-<div> <!--Contact-->
-	Portfolio
-</div> <!--Contact-->
 
-<div><!--name-->
-Name
-</div>
-<div><!--name box-->
-	#
-</div>
-<div><!--email-->
-Email
-</div>
-<div><!--email box-->
-	#
-</div>
-<div><!--message-->
-Message
-</div>
-<div><!--message box-->
-	#
-</div>
-<div>
-submit
-</div>
+<form action="mailto:victoria.shadid@gmail.com">
+	<div> <!--Contact-->
+		Contact me
+	</div> <!--Contact-->
+
+
+	Name:<br>
+
+	<input type="text" name="Name"><br><!--name box-->
+	
+	Email:<br>
+
+	<input type="text" name="Email"><br>
+
+	Message:<br>
+	<textarea></textarea><br>
+	<button>submit</button><br>
+
+
+
 <div align="right"> <!--links-->
 	<p>Connect with me</p>
 	<a href="https://github.com/victoria-field"><img src="assets\images\github-mark.png" alt="github-mark" width="100" /></a>
